# iiif_now

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
iiif_now/: __init__.py  iiifnow.py
iiif_now/csvreader/: csvreader.py
iiif_now/datacanvas/: datacanvas.py
iiif_now/manifest/: manifest.py
iiif_now/navplace/: navplace.py
manifest/: manifest.py
